--- a/Mycroft/Mycroft.nuspec
+++ b/Mycroft/Mycroft.nuspec
@@ -6,12 +6,12 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>https://github.com/rit-sse-mycroft/app-templates/tree/master/csharp</projectUrl>
+    <licenseUrl>https://raw.githubusercontent.com/rit-sse-mycroft/template-csharp/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/rit-sse-mycroft/template-csharp</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
+    <releaseNotes></releaseNotes>
     <copyright>Copyright 2014</copyright>
-    <tags>Tag1 Tag2</tags>
+    <tags>mycroft RIT app-template</tags>
   </metadata>
 </package>
